@@ -78,6 +78,7 @@ Version 1.5.6+svn:
    * Added the transparent version of Kitty's portraits.
    * Rewrote the drawing engine for the new widgets.
    * Enabled the new dialogs when a new portrait is available.
+   * Properly update animated halos (bug #11965).
  * Language and i18n:
    * Renamed the --dummylocales parameter to --dummy-locales.
    * Fixed the po extraction tool to also include the id field.
